# Athena

./: CMakeLists.txt  README.md  package.xml
include/athena/: copter.h
launch/: athena.launch  athena_guided.launch  guided_test.launch  servo_test.launch
msg/: Mission.msg  Object.msg
src/: copter.cpp  fm_changer.cpp  fm_changer_test.cpp  main.cpp  mission_control.cpp  mission_guided.cpp  test_guided.cpp  test_pub.cpp  test_servo.cpp  test_servo2.cpp
src/ino/athena/: athena.ino
src/ino/athena_no_lidar/: athena_no_lidar.ino
src/scripts/: shape_detection.py  shape_detection2.py  video_stream.py  vision_color.py  vision_color_bw.py  vision_color_bw_pub.py  vision_color_pub.py  vision_pub.py
