<?xml version="1.0"?>
<package format="2">
  <name>athena</name>
  <version>0.0.0</version>
  <description>This package function is to exceute mission according to Kontes Robot Terbang Indonesia 2019</description>


  <maintainer email="grimlock2805@gmail.com">yosral</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/yosralism/</url>

 
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend> 

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>roslaunch</build_depend> 
  
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
   <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
